--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>PDV Web</title>
+    <title>Amburgueria Web</title>
   </head>
   <body>
     <app-root class="c-app mat-typography"></app-root>
